--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/AJYP/Maps/JYP_Skills.JYP_Skills
+EditorStartupMap=/Game/AJYP/Maps/JYP_Skills.JYP_Skills
 GlobalDefaultGameMode="/Script/Mannequin_Project.Mannequin_ProjectGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
