--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -144,6 +144,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Sprinting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="InteractionWall",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="ChangePerspctive",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
