--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -141,7 +141,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Thumbstick_Click)
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MagicLeap_Left_Bumper)
 +ActionMappings=(ActionName="Sliding",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
-+ActionMappings=(ActionName="Sprinting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="Sprinting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="InteractionWall",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="ChangePerspctive",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
