--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/AJYP/Maps/JYP_Skills.JYP_Skills
-EditorStartupMap=/Game/AJYP/Maps/JYP_Skills.JYP_Skills
+GameDefaultMap=/Game/AFinal/Maps/Final.Final
+EditorStartupMap=/Game/AFinal/Maps/Final.Final
 GlobalDefaultGameMode="/Script/Mannequin_Project.Mannequin_ProjectGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
